--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,17 @@ body{width: 100%;}
     height: 100%;
 }
 nav{
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     width: 700px;
 }
 nav>a{
-    display: inline-block;
+    display: inline;
     color: black;
     text-decoration: none;
     font-size: 150%;
     margin: 0px 10px;
+}
+#homePage{
+    background-image: url();
 }
