--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-html,body,nav,a,h1,footer,h2,h3,h4,span,div,img{
+html,body,nav,a,h1,footer,h2,h3,h4,span,div,img,p{
     margin: 0px;
     padding: 0px;
     border: 0px;
 }
-html{width: 100%;}
-body{width: 100%;}
+html{width: 100%;height: 100%;}
+body{width: 100%;height: 100%;}
 .homebar{
     width: 100%;
     display: flex;
@@ -14,6 +14,10 @@ body{width: 100%;}
     align-items: center;
 }
 .logo{
+    height: 100%;
+}
+#contentHolder{
+    width: 100%;
     height: 100%;
 }
 nav{
@@ -29,5 +33,21 @@ nav>a{
     margin: 0px 10px;
 }
 #homePage{
-    background-image: url();
+    background-image: url(/images/hero-image.jpg);
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+#homePage>p{
+    background-color: white;
+    display: inline-block;
+    height: fit-content;
+    margin: 250px;
+    font-size: 28pt;
+    font-family: Helvetica, sans-serif;
+    font-weight: 700;
+    padding: 10px;
 }
