--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,29 @@
-html,body,nav,a,h1,footer,h2,h3,h4,h5,span,div,img,p,button{
+html,body,nav,a,h1,footer,h2,h3,h4,h5,span,div,img,p,button,iframe{
     margin: 0px;
     padding: 0px;
     border: 0px;
 }
 html{width: 100%;height: 100%;}
 body{width: 100%;height: 100%;}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Phudu';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/Phudu/Phudu-VariableFont_wght.ttf') format('ttf');
+  }
+
+  /* poppins-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/Poppins/Poppins-Black.ttf') format('ttf'); 
+  }
+  
+
 .homebar{
     width: 100%;
     display: flex;
@@ -171,6 +190,9 @@ width: 150px;
     width: 90%;
     margin: 0 auto;
 }
+.recipeName{
+    margin:4% 0;
+}
 .review{
     text-align: center;
     font-size: 20pt;
@@ -178,16 +200,33 @@ width: 150px;
 .review .stars{
     color: #A63223;
 }
+.recipeSave{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2%;
+    margin: 2% 0;
+}
 .recipeSave button{
+    font-size: 20pt;
     background-color: #A63223;
-    border-radius: 10px;
+    border-radius: 30px;
     color: #fff;
-    padding: 10px;
+
+    padding: 15px;
+}
+.recipeSave img{
+    width: 35px;
+    height: 35px;
+    padding: 5px;
+    object-fit: cover;
+    border: 2px black solid;
+    border-radius: 50%;
 }
 .recipeName h1{
     font-size: 55pt;
     text-align: center;
-    /* padding: 15px; */
+    font-family: 'Phudu', sans-serif;
 }
 .recipeHook{
     background-color: #DADFEA;
@@ -201,18 +240,34 @@ width: 150px;
 .ingredients{
     flex-grow: 2;
 }
+.ingredients>h1,.cookDirect>h1{
+    margin-top: 10%;
+}
 .cookDirect{
     width: 50%;
 }
 li{
-    font-size: 20pt;
+    font-size: 18pt;
 }
 ol>h4,ul>h4{
-    font-size: 21pt;
+    font-size: 22pt;
+    margin-top: 10%;
 }
-ol>li{
-    margin: 20px 0px;
+ol>li,ul>li{
+    margin: 25px 0px;
 }
 ol{
     margin-bottom: 25%;
+}
+.vid{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+.vid h2{
+    margin-bottom: 2%;
+}
+iframe{
+    margin-bottom: 5%;
 }
